# aarogya-voice-agent

./: .gitignore  README.md
agent/: .dockerignore  .env.example  Dockerfile  README.md  dev.sh  livekit.toml  main.py  pyproject.toml  setup.sh
agent/clinic/: __init__.py  availability.py  db.py  llm_fallback.py  models.py  prompts.py  providers.py  validators.py
agent/clinic/orm/: __init__.py  engine.py  seed.py  tables.py
agent/database/: README.md
agent/scripts/: init_db.py  validate_env.py
agent/tests/: test_availability.py  test_helpers.py  test_validators.py
scripts/: clean.sh  setup.sh
web/: .env.example  README.md  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/livekit-token/: route.ts
web/components/: voice-assistant.tsx
web/lib/: config.ts  rate-limit.ts
