[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aarogya-voice-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30.0,<1",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "livekit-agents[deepgram,elevenlabs,google,silero,turn-detector]>=1.3.0,<2",
  "livekit-plugins-sarvam>=1.3.0,<2",
  "livekit-plugins-noise-cancellation>=0.2.0,<1",
  "python-dotenv>=1.0.1,<2",
]

[project.optional-dependencies]
test = ["pytest>=8.3,<9", "pytest-asyncio>=0.24,<1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["clinic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
